# fastapidemo

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  test_main.http  test_main.py
src/fastapidemo/: __init__.py
src/fastapidemo/account/: __init__.py  models.py  token.py  views.py
static/: template-service-params.json
static/services/: EMR-PL-04-个人信息查询服务-T01.xml  EMR-PL-07-医疗卫生机构（科室）信息查询服务-F01.xml  EMR-PL-07-医疗卫生机构（科室）信息查询服务-T01.xml  EMR-PL-10-医疗卫生人员信息查询服务-F01.xml  EMR-PL-10-医疗卫生人员信息查询服务-T01.xml  EMR-PL-13-术语查询服务-F01.xml  EMR-PL-13-术语查询服务-T01.xml  EMR-PL-15-电子病历文档检索服务-F01.xml  EMR-PL-15-电子病历文档检索服务-T01.xml  EMR-PL-16-电子病历文档调阅服务-F01.xml  EMR-PL-16-电子病历文档调阅服务-T01.xml  EMR-PL-19-就诊卡信息查询服务-F01.xml  EMR-PL-19-就诊卡信息查询服务-T01.xml  EMR-PL-22-门诊挂号信息查询服务-F01.xml  EMR-PL-22-门诊挂号信息查询服务-T01.xml  EMR-PL-25-住院就诊信息查询服务-F01.xml  EMR-PL-25-住院就诊信息查询服务-T01.xml  EMR-PL-28-住院转科信息查询服务-F01.xml  EMR-PL-28-住院转科信息查询服务-T01.xml  EMR-PL-31-出院登记信息查询服务-F01.xml  EMR-PL-31-出院登记信息查询服务-T01.xml  EMR-PL-34-医嘱信息查询服务-F01.xml  EMR-PL-34-医嘱信息查询服务-T01.xml  EMR-PL-37-检验申请信息查询服务-F01.xml  EMR-PL-37-检验申请信息查询服务-T01.xml  EMR-PL-40-检查申请信息查询服务-F01.xml  EMR-PL-40-检查申请信息查询服务-T01.xml  EMR-PL-43-病理申请信息查询服务-F01.xml  EMR-PL-43-病理申请信息查询服务-T01.xml  EMR-PL-46-输血申请信息查询服务-F01.xml  EMR-PL-46-输血申请信息查询服务-T01.xml  EMR-PL-49-手术申请信息查询服务-F01.xml  EMR-PL-49-手术申请信息查询服务-T01.xml  EMR-PL-52-号源排班信息查询服务-F01.xml  EMR-PL-52-号源排班信息查询服务-T01.xml  EMR-PL-55-门诊预约状态信息查询服务-F01.xml  EMR-PL-55-门诊预约状态信息查询服务-T01.xml  EMR-PL-58-检查预约状态信息查询服务-F01.xml  EMR-PL-58-检查预约状态信息查询服务-T01.xml  EMR-PL-60-医嘱执行状态信息查询服务-T01.xml  (+8 more)
(+27 files in other folders)
